fix(ui): make #app container height 100vh for flexbox layout

--- a/webui/web/index.html
+++ b/webui/web/index.html
@@ -37,7 +37,8 @@
       --header-h: 52px;
     }
 
-    body {
+    body,
+    #app {
       background: var(--bg);
       color: var(--text);
       font-family: 'Inter', system-ui, sans-serif;
