--- a/webui/web/index.html
+++ b/webui/web/index.html
@@ -210,7 +210,7 @@
 
     /* ── Metrics Drawer ── */
     .drawer {
-      width: 360px;
+      width: 420px;
       height: 100%;
       background: var(--surface);
       border-left: 1px solid var(--border);
@@ -268,7 +268,8 @@
     /* Gauge */
     .gauge-row {
       display: flex;
-      gap: 12px;
+      gap: 10px;
+      justify-content: space-between;
     }
 
     .gauge-card {
@@ -276,7 +277,7 @@
       background: var(--bg);
       border: 1px solid var(--border);
       border-radius: 10px;
-      padding: 12px;
+      padding: 10px;
       text-align: center;
     }
 
@@ -842,9 +843,9 @@
               },
               defaultNode: {
                 type: 'rect',
-                size: [120, 36],
+                size: [110, 30],
                 style: { radius: 6, lineWidth: 1, stroke: '#30363d' },
-                labelCfg: { style: { fill: '#e6edf3', fontSize: 12 } }
+                labelCfg: { style: { fill: '#e6edf3', fontSize: 11 } }
               },
               defaultEdge: {
                 type: 'polyline',
