--- a/webui/web/index.html
+++ b/webui/web/index.html
@@ -627,6 +627,26 @@
           return Object.values(map);
         });
 
+        const osIcons = {
+          'windows': 'https://s2.loli.net/2024/09/25/3N1DqVbXJ2YnLWx.svg',
+          'linux': 'https://s2.loli.net/2024/09/25/T8K5FZyLwqhN74c.svg',
+          'openwrt': 'https://s2.loli.net/2024/09/25/oP1rZb3zL8wUfNm.svg',
+          'merlin': 'https://s2.loli.net/2024/09/25/oP1rZb3zL8wUfNm.svg', // using router icon
+          'fnos': 'https://s2.loli.net/2024/09/25/m9HkJQZD3sT2dLR.svg', // generic nas/server
+          'proxmox': 'https://s2.loli.net/2024/09/25/m9HkJQZD3sT2dLR.svg',
+          'mac': 'https://s2.loli.net/2024/09/25/P2K8YV3WJqHZnz4.svg',
+          'default': 'https://s2.loli.net/2024/09/25/g8P2YV3WJqHZnz4.svg'  // generic device
+        };
+
+        function getOsIconUrl(osName) {
+          if (!osName) return osIcons['default'];
+          const lower = osName.toLowerCase();
+          for (let key in osIcons) {
+            if (lower.includes(key)) return osIcons[key];
+          }
+          return osIcons['default'];
+        }
+
         function flattenTree(nodes, result = []) {
           nodes?.forEach(n => { result.push(n); flattenTree(n.children, result); });
           return result;
@@ -637,9 +657,13 @@
             nodes.push({
               id: String(dev.id),
               label: dev.hostname,
+              img: getOsIconUrl(dev.os),
               style: {
-                fill: dev.is_online ? 'rgba(63,185,80,.15)' : '#161b22',
+                fill: dev.is_online ? '#3fb950' : '#8b949e', // Image tint/bg logic doesn't strictly apply, we rely on icon visually.
                 stroke: dev.is_online ? '#3fb950' : '#30363d'
+              },
+              stateStyles: {
+                selected: { stroke: '#58a6ff', lineWidth: 2, shadowColor: '#58a6ff', shadowBlur: 10 }
               }
             });
             if (parentId != null) {
@@ -842,18 +866,21 @@
                 ranksep: 70
               },
               defaultNode: {
-                type: 'rect',
-                size: [110, 30],
-                style: { radius: 6, lineWidth: 1, stroke: '#30363d' },
-                labelCfg: { style: { fill: '#e6edf3', fontSize: 11 } }
+                type: 'image',
+                size: [48, 48],
+                labelCfg: {
+                  position: 'bottom',
+                  offset: 8,
+                  style: { fill: '#e6edf3', fontSize: 12, background: { fill: '#0d1117', padding: [2, 4], radius: 4 } }
+                }
               },
               defaultEdge: {
                 type: 'polyline',
                 style: { radius: 10, stroke: '#58a6ff', lineWidth: 1.5, endArrow: true }
               },
               nodeStateStyles: {
-                hover: { stroke: '#58a6ff', lineWidth: 2 },
-                selected: { stroke: '#58a6ff', lineWidth: 2, shadowColor: '#58a6ff', shadowBlur: 10 }
+                hover: { shadowColor: '#58a6ff', shadowBlur: 10 },
+                selected: { shadowColor: '#58a6ff', shadowBlur: 15 }
               }
             });
 
