--- a/webui/web/index.html
+++ b/webui/web/index.html
@@ -879,8 +879,8 @@
                 style: { radius: 10, stroke: '#58a6ff', lineWidth: 1.5, endArrow: true }
               },
               nodeStateStyles: {
-                hover: { shadowColor: '#58a6ff', shadowBlur: 10 },
-                selected: { shadowColor: '#58a6ff', shadowBlur: 15 }
+                hover: { opacity: 0.8 },
+                selected: { opacity: 1 }
               }
             });
 
