fix(ui): use jsdelivr simple-icons for OS SVGs to resolve CORS and 404 errors

--- a/webui/web/index.html
+++ b/webui/web/index.html
@@ -628,14 +628,14 @@
         });
 
         const osIcons = {
-          'windows': 'https://s2.loli.net/2024/09/25/3N1DqVbXJ2YnLWx.svg',
-          'linux': 'https://s2.loli.net/2024/09/25/T8K5FZyLwqhN74c.svg',
-          'openwrt': 'https://s2.loli.net/2024/09/25/oP1rZb3zL8wUfNm.svg',
-          'merlin': 'https://s2.loli.net/2024/09/25/oP1rZb3zL8wUfNm.svg', // using router icon
-          'fnos': 'https://s2.loli.net/2024/09/25/m9HkJQZD3sT2dLR.svg', // generic nas/server
-          'proxmox': 'https://s2.loli.net/2024/09/25/m9HkJQZD3sT2dLR.svg',
-          'mac': 'https://s2.loli.net/2024/09/25/P2K8YV3WJqHZnz4.svg',
-          'default': 'https://s2.loli.net/2024/09/25/g8P2YV3WJqHZnz4.svg'  // generic device
+          'windows': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/windows11.svg',
+          'linux': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/linux.svg',
+          'openwrt': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/openwrt.svg',
+          'merlin': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/asus.svg',
+          'fnos': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/truenas.svg',
+          'proxmox': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/proxmox.svg',
+          'mac': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/apple.svg',
+          'default': 'https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/serverless.svg'
         };
 
         function getOsIconUrl(osName) {
